<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size35"
            android:layout_marginTop="@dimen/size30"
            android:gravity="center_horizontal"
            android:text="@string/setting_general_setting"
            android:textColor="@color/setting_general_setting"
            android:textSize="@dimen/size40"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/setting_margin"
            android:background="@color/setting_general_setting"
            android:elevation="@dimen/size4"
            android:orientation="vertical"
            android:padding="@dimen/size20">

            <LinearLayout
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/size15"
                android:paddingBottom="@dimen/size15"
                android:paddingRight="@dimen/size15"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <LinearLayout
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:spinnerMode="dropdown"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_language_black_24dp"
                        android:drawableTint="@color/setting_hint_color"
                        android:layout_marginTop="@dimen/size5"
                        android:id="@+id/type_of_search"
                        />

                    <ImageButton
                        android:id="@+id/update_type"
                        android:layout_weight="3"
                        android:layout_width="@dimen/setting_buttonimage_width"
                        android:layout_height="@dimen/setting_buttonimage_hight"
                        android:background="@drawable/ic_done_black_24dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:spinnerMode="dropdown"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_language_black_24dp"
                        android:drawableTint="@color/setting_hint_color"
                        android:layout_marginTop="@dimen/size5"
                        android:id="@+id/year"
                        />

                    <ImageButton
                        android:id="@+id/update_year"
                        android:layout_weight="3"
                        android:layout_width="@dimen/setting_buttonimage_width"
                        android:layout_height="@dimen/setting_buttonimage_hight"
                        android:background="@drawable/ic_done_black_24dp"/>

                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_pages_black_24dp"
                            android:drawableTint="@color/setting_hint_color"
                            android:layout_marginTop="@dimen/size5"
                            android:hint="@string/setting_hint_page_number"
                            android:id="@+id/page_number"
                            android:inputType="number" />
                        <ImageButton
                            android:id="@+id/update_pagenumber"
                            android:layout_weight="3"
                            android:layout_width="@dimen/setting_buttonimage_width"
                            android:layout_height="@dimen/setting_buttonimage_hight"
                            android:background="@drawable/ic_done_black_24dp"/>
                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:weightSum="4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/language"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size5"
                            android:drawableLeft="@drawable/ic_language_black_24dp"
                            android:drawableTint="@color/setting_hint_color"
                            android:hint="@string/setting_hint_language"
                            android:inputType="textAutoCorrect" />
                        <ImageButton
                            android:id="@+id/update_language"
                            android:layout_weight="3"
                            android:layout_width="@dimen/setting_buttonimage_width"
                            android:layout_height="@dimen/setting_buttonimage_hight"
                            android:background="@drawable/ic_done_black_24dp"/>

                    </LinearLayout>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:weightSum="4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size5"
                            android:drawableLeft="@drawable/ic_photo_size_select_large_black_24dp"
                            android:drawableTint="@color/setting_hint_color"
                            android:hint="@string/setting_hint_size_of_image"
                            android:id="@+id/sizeofimage"
                            android:inputType="number" />

                        <ImageButton
                            android:id="@+id/update_sizeofimage"
                            android:layout_weight="3"
                            android:background="@drawable/ic_done_black_24dp"
                            android:layout_width="@dimen/setting_buttonimage_width"
                            android:layout_height="@dimen/setting_buttonimage_hight" />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

    </ScrollView>